--- a/.classpath
+++ b/.classpath
@@ -30,7 +30,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="E:/OneDrive/Bureau/serveur, world, test/spigot-1.8.9.jar" sourcepath="/spigot-1.8.9"/>
-	<classpathentry kind="lib" path="E:/OneDrive/Bureau/serveur, world, test/JDASpigot.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Roman/Desktop/serveur, world, test/spigot-1.8.9.jar" sourcepath="/spigot-1.8.9"/>
+	<classpathentry kind="lib" path="C:/Users/Roman/Desktop/serveur, world, test/Spigot_JDA_v0.1.7.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
