--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,6 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>fr.rolan.api</groupId>
   <artifactId>UHCAPI</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.1.0</version>
   <name>UHCAPI</name>
 </project>
